# manushya_dimag

./: .gitignore  API_DOCUMENTATION.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Financial_Services_Environment.json  Financial_Services_Use_Case_Collection.json  MANUSHYA_AI_SYSTEM_DOCUMENTATION.md  MANUSHYA_INVESTOR_DECK.md  MANUSHYA_PITCH_DOC.md  Makefile  Manushya_AI_API_Collection.json  PERFORMANCE_TUNING_GUIDE.md  README.md  SDK_README.md  alembic.ini  cleanup_data.py  debug_memory.py  docker-compose.yml  env.example  patch_json_logic.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_enterprise_identity_system.py  003_api_keys.py  004_invitations.py  005_sessions.py  006_identity_events.py  007_add_hnsw_vector_index.py  008_add_usage_metering.py  009_convert_vector_column_to_pgvector.py  4e75d9f52abd_add_webhook_models.py  6539c3fe626a_add_tenant_id_foreign_key_to_.py  8487352e991c_add_tenant_id_foreign_keys_to_all_models.py  ae073a147d44_add_rate_limits_table_and_fix_event_.py  d1f881357f54_add_sso_fields_to_identity.py  f4b5c097ab35_add_tenant_id_foreign_key_to_identity_.py  f9d2a795d0ac_increase_memory_vector_dimension_to_1536.py
manushya/: __init__.py  config.py  main.py
manushya/api/: __init__.py
manushya/api/v1/: __init__.py  api_keys.py  events.py  identity.py  invitations.py  memory.py  monitoring.py  policy.py  sessions.py  sso.py  usage.py  webhooks.py
manushya/core/: __init__.py  api_key_auth.py  auth.py  encryption.py  error_handling.py  event_service.py  exceptions.py  invitation_service.py  mfa_auth.py  password_auth.py  policy_engine.py  rate_limiter.py  redis_client.py  session_service.py
manushya/db/: __init__.py  database.py  models.py
manushya/services/: __init__.py  email_service.py  embedding.py  embedding_service.py  sso_service.py  usage_service.py  webhook_service.py
manushya/tasks/: __init__.py  celery_app.py  cleanup_tasks.py  memory_tasks.py  monitoring_tasks.py  webhook_tasks.py
scripts/: generate_sdk.py  init-db.sql  production_index_deployment.py
sdk/: openapi_patched.json
sdk/python/: README.md  __init__.py  setup.py  test_sdk_business_logic.py  types.py
sdk/python/api/admin/: delete_all_rate_limits_v1_admin_rate_limits_delete.py  list_all_rate_limits_v1_admin_rate_limits_get.py
sdk/python/api/api_keys/: create_api_key_v1_api_keys_post.py  get_api_key_v1_api_keys_api_key_id_get.py  list_api_keys_v1_api_keys_get.py  revoke_api_key_v1_api_keys_api_key_id_delete.py  test_api_key_auth_v1_api_keys_test_post.py  update_api_key_v1_api_keys_api_key_id_put.py
sdk/python/api/default/: health_check_healthz_get.py  metrics_metrics_get.py  root_get.py
sdk/python/api/events/: cleanup_old_events_v1_events_cleanup_post.py  get_event_stats_v1_events_stats_get.py  get_event_types_v1_events_types_get.py  get_event_v1_events_event_id_get.py  get_events_for_identity_v1_events_identity_identity_id_get.py  list_events_v1_events_get.py  retry_event_delivery_v1_events_retry_event_id_post.py  test_event_publishing_v1_events_test_post.py
sdk/python/api/identity/: create_identity_v1_identity_post.py  (+6 more)
sdk/python/models/: __init__.py  api_key_create.py  api_key_create_response.py  api_key_response.py  api_key_update.py  audit_trail_response.py  audit_trail_response_after_state.py  audit_trail_response_before_state.py  bulk_delete_memory_request.py  bulk_delete_memory_response.py  bulk_delete_memory_response_failed_memories_item.py  bulk_delete_policy_request.py  bulk_delete_policy_response.py  bulk_delete_policy_response_failed_policies_item.py  bulk_delete_request.py  bulk_delete_response.py  bulk_delete_response_failed_identities_item.py  event_response.py  event_response_metadata.py  event_response_payload.py  event_stats.py  event_stats_event_types.py  event_type_info.py  health_check_healthz_get_response_health_check_healthz_get.py  identity_create.py  identity_create_claims.py  identity_response.py  identity_response_claims.py  identity_token_response.py  identity_update.py  identity_update_claims_type_0.py  invitation_accept.py  invitation_accept_response.py  invitation_accept_response_identity.py  invitation_create.py  invitation_create_claims.py  invitation_response.py  invitation_response_claims.py  memory_create.py  memory_create_metadata.py  (+33 more)
tests/: __init__.py  conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_auth.py  test_embedding_service.py  test_memory.py
(+50 files in other folders)
